// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferSortingType tests Should OfferSortingType active render correctly 1`] = `
<div>
  <li
    class="places__option \\" tabIndex=\\"0\\"
    places__option--active"
  >
    Popular
  </li>
</div>
`;

exports[`OfferSortingType tests Should OfferSortingType not active render correctly 1`] = `
<div>
  <li
    class="places__option \\" tabIndex=\\"0\\"
    null"
  >
    Popular
  </li>
</div>
`;
